force-app/main/default/objects/Auditoria__c/Auditoria__c.object-meta.xml
<CustomObject>
    <label>Auditoria</label>
    <nameField>
        <displayFormat>Audit{0000000}</displayFormat>
        <label>Nombre de Auditoria</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auditoria</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>