force-app/main/default/objects/Auditoria__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <description>Nombre del cliente</description>
    <formula>IF( Oportunidad__r.Account.IsPersonAccount = TRUE, ((Oportunidad__r.Account.FirstName + &quot; &quot; + Oportunidad__r.Account.MiddleName + &quot; &quot; + Oportunidad__r.Account.LastName)), 
 Oportunidad__r.Account.Name)</formula>
    <label>Cliente</label>
    <type>Text</type>
</CustomField>