force-app/main/default/objects/Auditoria__c/fields/Codigo_de_cliente__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_cliente__c</fullName>
    <description>Código del cliente de la oportunidad</description>
    <formula>Oportunidad__r.Account.CodigoCliente__c</formula>
    <label>Código de cliente</label>
    <type>Text</type>
</CustomField>