force-app/main/default/objects/Auditoria__c/fields/Comentarios_claros_10ptos__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_claros_10ptos__c</fullName>
    <description>Si los comentrarios son claros,10</description>
    <formula>IF(ISPICKVAL( Comentarios_claros_y_tareas_cerradas__c , &apos;SI&apos;),0.1,0)</formula>
    <inlineHelpText>10 puntos</inlineHelpText>
    <label>Comentarios claros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>