force-app/main/default/objects/Auditoria__c/fields/Comentarios_claros_y_tareas_cerradas__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_claros_y_tareas_cerradas__c</fullName>
    <description>Comentarios de cada llamada son descriptivos y están marcados como completadas?</description>
    <label>¿Comentarios claros y tareas cerradas?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Auditorias</valueSetName>
    </valueSet>
</CustomField>