force-app/main/default/objects/Auditoria__c/fields/Conocimiento_del_producto__c.field-meta.xml
<CustomField>
    <fullName>Conocimiento_del_producto__c</fullName>
    <formula>IF(
 ISPICKVAL( X4_Nuestro_asesor_de_ventas_aclar_las__c , &quot;SI&quot;), VALUE( $Label.Conocimiento_del_producto ) ,0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Conocimiento del producto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>