force-app/main/default/objects/Auditoria__c/fields/Correo_correcto__c.field-meta.xml
<CustomField>
    <fullName>Correo_correcto__c</fullName>
    <formula>IF (ISPICKVAL( X3_Su_correo_electr_nico_es_el_siguiente__c , &apos;SI&apos;), 0.20,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Correo correcto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>