force-app/main/default/objects/Auditoria__c/fields/Cotizaci_n_de_venta__c.field-meta.xml
<CustomField>
    <fullName>Cotizaci_n_de_venta__c</fullName>
    <formula>IF( ISPICKVAL(Se_entrega_por_algun_medio_broche__c,&apos;SI&apos;), 0.15, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>15 puntos</inlineHelpText>
    <label>Cotización de venta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>