force-app/main/default/objects/Auditoria__c/fields/Ejecutivo__c.field-meta.xml
<CustomField>
    <fullName>Ejecutivo__c</fullName>
    <label>Ejecutivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yúgdenes Fortín</fullName>
            </value>
            <value>
                <fullName>Gernán Sánchez</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>