force-app/main/default/objects/Auditoria__c/fields/Email_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Email_Cliente__c</fullName>
    <formula>Oportunidad__r.Email_Cliente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Cliente</label>
    <type>Text</type>
</CustomField>