force-app/main/default/objects/Auditoria__c/fields/Es_cuenta_natural__c.field-meta.xml
<CustomField>
    <fullName>Es_cuenta_natural__c</fullName>
    <formula>Oportunidad__r.Account.IsPersonAccount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>¿Es cuenta natural?</label>
    <type>Checkbox</type>
</CustomField>