force-app/main/default/objects/Auditoria__c/fields/Etapa__c.field-meta.xml
<CustomField>
    <fullName>Etapa__c</fullName>
    <defaultValue>&quot;Nuevo&quot;</defaultValue>
    <description>Para seguimiento por etapa</description>
    <label>Etapa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuevo</fullName>
                <default>true</default>
                <label>Nuevo</label>
            </value>
            <value>
                <fullName>Dia 1 primer intento</fullName>
            </value>
            <value>
                <fullName>Dia 1 segundo intento</fullName>
            </value>
            <value>
                <fullName>Dia 2 primer intento</fullName>
            </value>
            <value>
                <fullName>Cerrada perdida</fullName>
            </value>
            <value>
                <fullName>Cerrada ganada</fullName>
            </value>
            <value>
                <fullName>Dia 2 segundo intento</fullName>
                <isActive>false</isActive>
                <label>Dia 2 segundo intento</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>