force-app/main/default/objects/Auditoria__c/fields/Fecha_creacion_de_la_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Fecha_creacion_de_la_oportunidad__c</fullName>
    <formula>DATEVALUE( Oportunidad__r.CreatedDate )</formula>
    <label>Fecha creación de la oportunidad</label>
    <type>Date</type>
</CustomField>