force-app/main/default/objects/Auditoria__c/fields/Intercambio__c.field-meta.xml
<CustomField>
    <fullName>Intercambio__c</fullName>
    <formula>IF(
 ISPICKVAL( X10_Nuestro_asesor_de_ventas_le_pregunt__c , &quot;SI&quot;), VALUE( $Label.Intercambio ) ,0 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Intercambio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>