force-app/main/default/objects/Auditoria__c/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <description>Marca de la oportunidad</description>
    <formula>Oportunidad__r.Marca_UDC__r.Name</formula>
    <label>Marca</label>
    <type>Text</type>
</CustomField>