force-app/main/default/objects/Auditoria__c/fields/N_mero_de_tel_fono__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_tel_fono__c</fullName>
    <formula>Oportunidad__r.Account.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de teléfono</label>
    <type>Text</type>
</CustomField>