force-app/main/default/objects/Auditoria__c/fields/Name_concatenado__c.field-meta.xml
<CustomField>
    <fullName>Name_concatenado__c</fullName>
    <description>Campo para almacenar nombre con sucursal y marca, para poder hacer unas shraing settings y que cada jefe/ gerente pueda ver sus auditorias</description>
    <label>Name concatenado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>