force-app/main/default/objects/Auditoria__c/fields/Opciones_de_Compra__c.field-meta.xml
<CustomField>
    <fullName>Opciones_de_Compra__c</fullName>
    <formula>IF(
 ISPICKVAL( X6_Nuestro_asesor_de_ventas_le_present__c , &quot;SI&quot;), VALUE(  $Label.Opciones_de_Compra  ) ,0 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Opciones de Compra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>