force-app/main/default/objects/Auditoria__c/fields/Oportunidad_con_reserva__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_con_reserva__c</fullName>
    <formula>Oportunidad__r.Tiene_chasis_reservado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>¿Oportunidad con reserva?</label>
    <type>Checkbox</type>
</CustomField>