force-app/main/default/objects/Auditoria__c/fields/Primer_llamada__c.field-meta.xml
<CustomField>
    <fullName>Primer_llamada__c</fullName>
    <formula>IF (ISPICKVAL( Primer_llamada_dentro_de_24_horas__c ,&apos;SI&apos;),0.1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primer llamada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>