force-app/main/default/objects/Auditoria__c/fields/Primer_llamada_dentro_de_24_horas__c.field-meta.xml
<CustomField>
    <fullName>Primer_llamada_dentro_de_24_horas__c</fullName>
    <description>Primer Llamada después de creada la oportunidad (24 horas)</description>
    <label>Primer llamada dentro de 24 horas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Auditorias</valueSetName>
    </valueSet>
</CustomField>