force-app/main/default/objects/Auditoria__c/fields/Proceso_de_ventas__c.field-meta.xml
<CustomField>
    <fullName>Proceso_de_ventas__c</fullName>
    <formula>IF(
 ISPICKVAL( X11_Nuestro_asesor_de_ventas_le_entreg__c , &quot;SI&quot;),  VALUE( $Label.Proceso_de_ventas )  ,0 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Proceso de ventas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>