force-app/main/default/objects/Auditoria__c/fields/Razon_de_perdida__c.field-meta.xml
<CustomField>
    <fullName>Razon_de_perdida__c</fullName>
    <label>Razon de perdida</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Etapa__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente no contestó</fullName>
            </value>
            <value>
                <fullName>Cliente no quizo brindad información</fullName>
            </value>
            <value>
                <fullName>Número de celular incorrecto</fullName>
            </value>
            <value>
                <fullName>Ya existe otra oportunidad vigente</fullName>
            </value>
            <value>
                <fullName>Cliente no localizable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>