force-app/main/default/objects/Auditoria__c/fields/Razon_especifica_de_cierre__c.field-meta.xml
<CustomField>
    <fullName>Razon_especifica_de_cierre__c</fullName>
    <label>Razón específica de cierre</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Razon_de_perdida__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contacto ya no labora en empresa</fullName>
            </value>
            <value>
                <fullName>Teléfono aleatorio</fullName>
            </value>
            <value>
                <fullName>Teléfono de un colaborador</fullName>
            </value>
            <value>
                <fullName>Teléfono de un familiar</fullName>
            </value>
            <value>
                <fullName>Buzón directo</fullName>
            </value>
            <value>
                <fullName>Número de teléfono extranjero</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>