force-app/main/default/objects/Auditoria__c/fields/Registro_en_CRM_Datos_Correctos__c.field-meta.xml
<CustomField>
    <fullName>Registro_en_CRM_Datos_Correctos__c</fullName>
    <formula>IF(
ISPICKVAL( X1_Puede_confimarnos_que_su_direcci_n_es__c , &quot;SI&quot;),0.10,0)</formula>
    <label>% Registro en CRM, Datos Correctos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>