force-app/main/default/objects/Auditoria__c/fields/Se_entrega_por_algun_medio_broche__c.field-meta.xml
<CustomField>
    <fullName>Se_entrega_por_algun_medio_broche__c</fullName>
    <description>¿Nuestro asesor de ventas le entregó o envío por algún medio electrónico (correo, SMS, WhatsApp, Messenger) una cotización, brochure o información del modelo de su interés?</description>
    <label>1¿Entrega de cotización, info del carro?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Auditorias</valueSetName>
    </valueSet>
</CustomField>