force-app/main/default/objects/Auditoria__c/fields/Seguimiento_25_ptos__c.field-meta.xml
<CustomField>
    <fullName>Seguimiento_25_ptos__c</fullName>
    <description>Nota par seguimietno del vendedor</description>
    <formula>IF ( ISPICKVAL( Seguimiento_semanal_por_vendedor__c ,&apos;SI&apos;),0.10,0)</formula>
    <inlineHelpText>10 puntos</inlineHelpText>
    <label>Seguimiento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>