force-app/main/default/objects/Auditoria__c/fields/Seguimiento_semanal_por_vendedor__c.field-meta.xml
<CustomField>
    <fullName>Seguimiento_semanal_por_vendedor__c</fullName>
    <description>¿Ha recibido seguimiento semanal a su cotización de parte de nuestro asesor de ventas?</description>
    <label>¿Seguimiento semanal por vendedor?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Auditorias</valueSetName>
    </valueSet>
</CustomField>