force-app/main/default/objects/Auditoria__c/fields/Ser_contactado_1_vez_por_semana_o_nunca__c.field-meta.xml
<CustomField>
    <fullName>Ser_contactado_1_vez_por_semana_o_nunca__c</fullName>
    <inlineHelpText>Ser contactado 1 vez por semana (o nunca) fue por solicitud suya o por decision del vendedor?</inlineHelpText>
    <label>Decisión propia o del vendedor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decisión propia</fullName>
            </value>
            <value>
                <fullName>Decisión del vendedor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>