force-app/main/default/objects/Auditoria__c/fields/Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Sucursal__c</fullName>
    <formula>TEXT(Oportunidad__r.Owner.Sucursal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sucursal</label>
    <type>Text</type>
</CustomField>