force-app/main/default/objects/Auditoria__c/fields/Telefono_correcto__c.field-meta.xml
<CustomField>
    <fullName>Telefono_correcto__c</fullName>
    <formula>IF (ISPICKVAL( X2_Su_n_mero_de_tel_fono_es_el_siguiente__c,&apos;SI&apos;), 0.15,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>15 puntos</inlineHelpText>
    <label>Teléfono correcto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>