force-app/main/default/objects/Auditoria__c/fields/Tiene_seguimiento_semanal__c.field-meta.xml
<CustomField>
    <fullName>Tiene_seguimiento_semanal__c</fullName>
    <description>Tiene seguimiento semanal antes de la reserva, si reservo al menos una vez al mes ? Tiene agendada una próxima actividad y aparece como pendiente?</description>
    <label>¿Tiene seguimiento semanal?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Auditorias</valueSetName>
    </valueSet>
</CustomField>