force-app/main/default/objects/Auditoria__c/fields/Total_Auditoria__c.field-meta.xml
<CustomField>
    <fullName>Total_Auditoria__c</fullName>
    <formula>Comentarios_claros_10ptos__c +  Cotizaci_n_de_venta__c  +  Primer_llamada__c  + Seguimiento_25_ptos__c +  Registro_en_CRM_Datos_Correctos__c + Valores_Agregados__c + Correo_correcto__c + Telefono_correcto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Total Auditoria</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>