force-app/main/default/objects/Auditoria__c/fields/Validaci_n_de_datos_del_cliente__c.field-meta.xml
<CustomField>
    <fullName>Validaci_n_de_datos_del_cliente__c</fullName>
    <description>Para validar si los datos ingresado están correctos y brindarle un mejor servicio…&quot; 1. Podría confimarnos que su dirección es la siguiente (leer del SF)</description>
    <inlineHelpText>Para validar si los datos ingresado están correctos y brindarle un mejor servicio…&quot; 1. Podría confimarnos que su dirección es la siguiente (leer del SF)</inlineHelpText>
    <label>Validación de datos del cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Auditorias</valueSetName>
    </valueSet>
</CustomField>