force-app/main/default/objects/Auditoria__c/fields/Valores_Agregados__c.field-meta.xml
<CustomField>
    <fullName>Valores_Agregados__c</fullName>
    <formula>IF( ISPICKVAl( Etapa__c ,&apos;Cerrada perdida&apos;),0, IF(Oportunidad_con_reserva__c = FALSE, 0.20, IF (ISPICKVAL( X7_Nuestro_asesor_de_ventas_le_ofreci__c ,&apos;SI&apos;), 0.20, 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Valores Agregados</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>