force-app/main/default/objects/Auditoria__c/fields/Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Vendedor__c</fullName>
    <description>Nombre del vendedor en tipo texto</description>
    <formula>Oportunidad__r.Owner.FirstName &amp;&apos; &apos;&amp; Oportunidad__r.Owner.LastName</formula>
    <label>Vendedor</label>
    <type>Text</type>
</CustomField>