force-app/main/default/objects/Auditoria__c/fields/X10_Nuestro_asesor_de_ventas_le_pregunt__c.field-meta.xml
<CustomField>
    <fullName>X10_Nuestro_asesor_de_ventas_le_pregunt__c</fullName>
    <inlineHelpText>10. ¿Nuestro asesor de ventas le preguntó si usted tenía un vehículo para hacer intercambio?</inlineHelpText>
    <label>10.Asesor preguntó deseo de intercambio?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>