force-app/main/default/objects/Auditoria__c/fields/X11_Nuestro_asesor_de_ventas_le_entreg__c.field-meta.xml
<CustomField>
    <fullName>X11_Nuestro_asesor_de_ventas_le_entreg__c</fullName>
    <inlineHelpText>11. ¿Nuestro asesor de ventas le entregó o envío por cualquier medio una cotización del modelo de su interés?</inlineHelpText>
    <label>11. Se le envió cotización del vehículo?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>