force-app/main/default/objects/Auditoria__c/fields/X12_En_promedio_cada_cuanto_se_contact__c.field-meta.xml
<CustomField>
    <fullName>X12_En_promedio_cada_cuanto_se_contact__c</fullName>
    <inlineHelpText>12. En promedio cada cuanto se contactó con usted nuestro asesor de ventas? Todos los días, cada 2 días, 1 vez por semana, o nunca le contactó.</inlineHelpText>
    <label>12. En promedio cada cuanto se contactó?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Todos los días</fullName>
            </value>
            <value>
                <fullName>Cada dos días</fullName>
            </value>
            <value>
                <fullName>Una vez por semana</fullName>
            </value>
            <value>
                <fullName>Nunca</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>