force-app/main/default/objects/Auditoria__c/fields/X1_Puede_confimarnos_que_su_direcci_n_es__c.field-meta.xml
<CustomField>
    <fullName>X1_Puede_confimarnos_que_su_direcci_n_es__c</fullName>
    <inlineHelpText>1. Puede confirmarnos que su dirección es la siguiente (leer de Salesforce)</inlineHelpText>
    <label>1. Confirmar dirección del cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>