force-app/main/default/objects/Auditoria__c/fields/X2_Su_n_mero_de_tel_fono_es_el_siguiente__c.field-meta.xml
<CustomField>
    <fullName>X2_Su_n_mero_de_tel_fono_es_el_siguiente__c</fullName>
    <inlineHelpText>2. Su número de teléfono es el siguiente (leer de Salesforce)</inlineHelpText>
    <label>2¿Su número de teléfono es el siguiente?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>