force-app/main/default/objects/Auditoria__c/fields/X3_Su_correo_electr_nico_es_el_siguiente__c.field-meta.xml
<CustomField>
    <fullName>X3_Su_correo_electr_nico_es_el_siguiente__c</fullName>
    <inlineHelpText>3. Su correo electrónico es el siguiente (leer de Salesforce)</inlineHelpText>
    <label>3¿Su correo electrónico es el siguiente?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>