force-app/main/default/objects/Auditoria__c/fields/X4_Nuestro_asesor_de_ventas_aclar_las__c.field-meta.xml
<CustomField>
    <fullName>X4_Nuestro_asesor_de_ventas_aclar_las__c</fullName>
    <inlineHelpText>4. ¿Nuestro asesor de ventas aclaró las dudas sobre el vehículo de su interés?</inlineHelpText>
    <label>4.Nuestro asesor de ventas aclaró dudas?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>