force-app/main/default/objects/Auditoria__c/fields/X6_Nuestro_asesor_de_ventas_le_present__c.field-meta.xml
<CustomField>
    <fullName>X6_Nuestro_asesor_de_ventas_le_present__c</fullName>
    <inlineHelpText>6. ¿Nuestro asesor de ventas le presentó formas de compra y opciones de financiamiento?</inlineHelpText>
    <label>6.Se presentó formas de compra/finan?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>