force-app/main/default/objects/Auditoria__c/fields/X7_Nuestro_asesor_de_ventas_le_ofreci__c.field-meta.xml
<CustomField>
    <fullName>X7_Nuestro_asesor_de_ventas_le_ofreci__c</fullName>
    <inlineHelpText>7. ¿Nuestro asesor de ventas le ofreció nuestros servicios de valores agregados, plan de mantenimiento?</inlineHelpText>
    <label>4¿Le ofrecieron V.A y mantenimiento?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>