force-app/main/default/objects/Auditoria__c/fields/X8_GPS__c.field-meta.xml
<CustomField>
    <fullName>X8_GPS__c</fullName>
    <label>8. ¿GPS?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>