force-app/main/default/objects/Auditoria__c/fields/X9_Seguro_para_su_veh_culo__c.field-meta.xml
<CustomField>
    <fullName>X9_Seguro_para_su_veh_culo__c</fullName>
    <label>9. ¿Seguro para su vehículo?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>