force-app/main/default/objects/Auditoria__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vendedor__c</columns>
    <columns>Marca__c</columns>
    <columns>Sucursal__c</columns>
    <columns>Cliente__c</columns>
    <columns>Etapa__c</columns>
    <columns>Fecha_creacion_de_la_oportunidad__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>